fix login page body overflow issue

--- a/graylog2-web-interface/public/stylesheets/auth.less
+++ b/graylog2-web-interface/public/stylesheets/auth.less
@@ -25,7 +25,7 @@ body {
 }
 
 #login-box {
-    margin-top: 20%;
+    padding-top: 20%;
 }
 
 .footer {
